bitbybit-tests/tests/ui/range_variant_wrong_type.stderr
error[E0308]: mismatched types
 --> tests/ui/range_variant_wrong_type.rs:3:1
  |
3 | #[bitenum(u8, exhaustive: false)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | |
  | expected `u8`, found `u16`
  | expected `u8` because of return type
  |
  = note: this error originates in the attribute macro `bitenum` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/ui/range_variant_wrong_type.rs:3:1
  |
3 | #[bitenum(u8, exhaustive: false)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | |
  | expected `u16`, found `u8`
  | arguments to this enum variant are incorrect
  |
note: tuple variant defined here
 --> tests/ui/range_variant_wrong_type.rs:6:5
  |
6 |     RangeVariant(u16),
  |     ^^^^^^^^^^^^
  = note: this error originates in the attribute macro `bitenum` (in Nightly builds, run with -Z macro-backtrace for more info)
